--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+
 .App {
+  margin: 0;
+  padding: 0;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background: url('https://source.unsplash.com/random/1440x900');
+  background-size: 100% 100%;
+}
+
+.App h1 {
+  margin: 0;
+  padding-top: 10vh;
+  color: #FA7268;
 }
 
 .App-logo {
@@ -22,11 +35,32 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#quoteDisplay {
+  font-size: 25px;
+  font-family:  -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  color: #FA7268;
+
 }
+
+#authorDisplay {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color:#FA7268;
+}
+
+.center-div {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background: linear-gradient(35deg, #CCFFFF, #FFCCCC);
+  padding: 50px 100px;
+  border-radius: 20px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+
